--- a/intro/chandran.tex
+++ b/intro/chandran.tex
@@ -49,4 +49,4 @@ and Groth-Sahai proofs that
 \item $[\vecb{\kappa}_1]_\gamma - \sum_{j=1}^m b_j [\vecb{s}_{1,j}]_\gamma = \GS.\Com_{ck_\gamma}(0;\delta_1),\ldots,[\vecb{\kappa}_m]_\gamma-\sum_{j=1}^m b_j[\vecb{s}_{m,j}]_\gamma = \GS.\Com_{ck_\gamma}(0;\delta_m)$,\label{eq3p}
 \item $[\vecb{s}]_\gamma - \sum_{i=1}^m b'_i[\vecb{\kappa}_i]_\gamma  = \GS.\Com_{ck_\gamma}(0;\delta-\delta_{i_\alpha})$.\label{eq4p}
 \end{enumerate}
-It will be useful in our ring signature to note that the proof of \ref{eq4p}' contains $\GS.\Com_{ck_{2-\gamma}}(\delta-\delta_{i_\alpha})$ and $\GS.\Com_{ck_{2-\gamma}}(\delta_{i_\alpha})$, from which $[\delta]_{2-\gamma}$ can be extracted, provided that a trapdoor for $ck_{2-\gamma}$ is available (which will be the case).
+%It will be useful in our ring signature to note that the proof of \ref{eq4p}' contains $\GS.\Com_{ck_{2-\gamma}}(\delta-\delta_{i_\alpha})$ and $\GS.\Com_{ck_{2-\gamma}}(\delta_{i_\alpha})$, from which $[\delta]_{2-\gamma}$ can be extracted, provided that a trapdoor for $ck_{2-\gamma}$ is available (which will be the case).
