--- a/intro/discussion.tex.tex
+++ b/intro/discussion.tex.tex
@@ -6,12 +6,12 @@
 
 \subsubsection{Getting rid of the permutation pairing assumption.}
 
-The PPA-based ring signature has the disadvantage that the PPA is not a constant-size assumption and belongs to the class of the so called $q$-assumptions (such as the Strong Diffie-Hellman assumption among others). It is then desirable to have a similar construction under more standard constant-size assumptions such as the SXDH assumption.
+The PPA-based ring signature has the disadvantage that the PPA is a non-constant size assumption and belong to the class of the so called $q$-assumption (such as the Strong Diffie-Hellman assumption among others). It is then natural to ask if a similar ring signature can be constructed under more standard assumptions such as the SXDH assumption.
  
-Consider the set of binary vectors of size $m$ and the function $h$ defined as the hamming weight of a binary vector $h(\vecb{\beta}) = \sum_{i=1}^m \beta_i$.  Analogously as with the PPA, $h(\vecb{\beta})=h(\vecb{\beta}')$ and $\vecb{\beta},\vecb{\beta}'\in\bits^m$ implies that $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$. (Note that in this case $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$ unconditionally.)
+Consider the set of binary vectors of size $m$ and the function $h$ defined as the hamming weight of a binary vector $h(\vecb{\beta}) = \sum_{i=1}^m \beta_i$.  As with the PPA, $h(\vecb{\beta})=h(\vecb{\beta}')$ and $\vecb{\beta},\vecb{\beta}'\in\bits^m$ implies that $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$. Furthermore, in this case $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$ unconditionally.
 We use this property of binary vectors as a replacement of the PPA.
 Define also $g_\vecb{\beta}(\vecb{vk}) := \sum_i \beta_i vk_i$.
-Although $g$ is longer collision resistant, it turns out that proofs that $h(\vecb{\beta}') = h(\vecb{\beta})$ and $g_{\vecb{\beta}'}(\vecb{vk}') = g_{\vecb{\beta}}(\vecb{vk})$ will still allow us to prove unforgeability.\footnote{Even when the adversary only knows a commitment to $\vecb{\beta}$, as it will be in our case, $g$ is not collision resistant. For small rings, the adversary may guess $\vecb{\beta}$ with non-negligible probability and solve $\sum_i\beta_i(vk_i-vk'_i)=0$ for some non trivial $\vecb{vk}'$. However, this adversary is not even not aware that it has found a collision.}
+Although $g$ is longer collision resistant, it turns out that proofs that $h(\vecb{\beta}') = h(\vecb{\beta})$ and $g_{\vecb{\beta}'}(\vecb{vk}') = g_{\vecb{\beta}}(\vecb{vk})$ still imply unforgeability.\footnote{Even when the adversary only knows a commitment to $\vecb{\beta}$, as it will be in our case, $g$ is not collision resistant. For small rings, the adversary may guess $\vecb{\beta}$ with non-negligible probability and solve $\sum_i\beta_i(vk_i-vk'_i)=0$ for some non trivial $\vecb{vk}'$. However, this adversary is not even not aware that it has found a collision.}
 
 Each possible ring member generates a single $\beta\in\bits$ and her extended verification key contains commitments $\vecb{a}=\Com(\beta)$, $\vecb{d} = \Com(\beta vk)$, and $vk$. Additionally it contains $\pi$, a Groth-Sahai proof that $\beta\in\bits$, and $\theta$, a Groth-Sahai proof that $y = \beta vk$ where $y$ is $\vecb{d}$'s opening.
 Although $g$ and $h$ are not efficiently computable from the extended verification keys, it is possible to compute commitments to $h(\vecb{\beta})$ and $g_\vecb{\beta}(\vecb{vk})$ using the homomorphic properties of Groth-Sahai commitments. Indeed $\Com(h(\vecb{\beta})) = \sum_i \vecb{a}_i$ and $\Com(g_\vecb{\beta}(\vecb{vk})) = \sum_i \vecb{d}_i$. Using this fact together with the re-randomizability of Groth-Sahai proofs (see \cite{C:BCCKLS09}) we will emulate the ring signature in the PPA setting.
@@ -19,20 +19,16 @@ Although $g$ and $h$ are not efficiently computable from the extended verificati
 Assume the signer wish to sign on behalf of the ring $R=\{vk_{1,1},\ldots,vk_{n^{2/3},m}\}$ knowing the secret key corresponding to $vk_{\mu,\nu}$. Define $\matr{A}_1,\ldots,\matr{A}_{n^{2/3}}$ as in the PPA construction and let $\vecb{\beta}_1,\ldots,\vecb{\beta}_{n^{2/3}}$ the respective openings.
 In the first part of the signature, the signer proves knowledge of some $\Com(h(\vecb{\beta}_\mu))$ from $H = \{\Com(h(\vecb{\beta}_1)),\ldots,\allowbreak\Com(h(\vecb{\beta}_{n^{2/3}}))\}$ and then commits to $\matr{A}'$, a permutation of a re-ran\-do\-mi\-za\-tion of $\matr{A}_\mu$ such that $\vecb{a}'_1$ is a re-randomization of $\vecb{a}_{\mu,\nu}$. Then it shows with a Groth-Sahai proof that a) $\sum_i \vecb{a}'_i - \Com(h(\vecb{\beta}_\mu)) = \Com(0)$, and b) $\beta'_1\ldots,\beta'_m\in\bits$ re-randomizing proofs $\pi_{\mu,1},\ldots,\pi_{\mu,m}$. It follows that $\vecb{\beta}'$, the vector of openings of $\matr{A}'$, is a permutation of $\vecb{\beta}_\mu$, the vector of openings of $\matr{A}_\mu$.
 
-In the second part the signer proves knowledge of some $\Com(g_{\vecb{\beta}_\mu}(\vecb{vk}_\mu))$ from $G = \{\Com(g_{\vecb{\beta}_1}(\vecb{vk}_1)),\allowbreak\ldots,\Com(g_{\vecb{\beta}_{n^{2/3}}}(\vecb{vk}_{n^{2/3}}))\}$ and  computes commitments $\vecb{c}'_1,\allowbreak\ldots,\vecb{c}'_m$ to $vk'_1=vk_{\mu,1},\ldots,vk'_m=vk_{\mu,m}$, respectively. In section \ref{sec:prueba-g} we show that, from $\vecb{d}_{\mu,1},\ldots,\vecb{d}_{\mu,m}$ and $\theta_{\mu,1},\ldots,\theta_{\mu,m}$ one can derive a proof that $\sum_i \beta'_i vk'_i  = \sum_{i} \beta_{\mu,i}vk_{\mu,i}$, or equivalently a proof that $g_{\vecb{\beta}'}(\vecb{vk}') = g_{\vecb{\beta}_\mu}(\vecb{vk}_\mu)$.
+In the second part the signer proves knowledge of some $\Com(g_{\vecb{\beta}_\mu}(\vecb{vk}_\mu))$ from $G = \{\Com(g_{\vecb{\beta}_1}(\vecb{vk}_1)),\allowbreak\ldots,\Com(g_{\vecb{\beta}_{n^{2/3}}}(\vecb{vk}_{n^{2/3}}))\}$ and  computes commitments $\vecb{c}'_1,\allowbreak\ldots,\vecb{c}'_m$ to $vk'_1=vk_{\mu,1},\ldots,vk'_m=vk_{\mu,m}$, respectively. We will show that, from $\vecb{d}_{\mu,1},\ldots,\vecb{d}_{\mu,m}$ and $\theta_{\mu,1},\ldots,\theta_{\mu,m}$ one can derive a proof that $\sum_i \beta'_i vk'_i  = \sum_{i} \beta_{\mu,i}vk_{\mu,i}$, or equivalently a proof that $g_{\vecb{\beta}'}(\vecb{vk}') = g_{\vecb{\beta}_\mu}(\vecb{vk}_\mu)$.
 
 %An adversary forging a signature for some $\vecb{vk}\notin R$ will produce some $\vecb{c}'_1$ which is not a re-randomizations of any of $\vecb{c}_{\mu,1},\ldots,\vecb{c}_{\mu,m}$. Or equivalently, $sk_1\neq sk_{\mu,j}$ for all $j$.
 
-Zero-knowledge of the set-membership proof implies perfect anonymity of the ring signature, and follows from the fact that all proofs are statistically independent of $vk$ when the Groth-Sahai CRS is perfectly hiding.
-Soundness implies unforgeability, and follows from the following argument.
+Suppose an adversary wish to convince the verifier that $vk=vk'_1$ is in $R$ while in fact $vk\notin R$. In particular, this implies that $\vecb{vk}'$ is not a permutation of $\vecb{vk}_\mu$. Without loss of generality, we may assume that $\vecb{vk}_\mu$ has not repeated entries since the verifier might drop all repeated entries in $R$ without changing the statement. Then, there is some $vk_{\mu,i}$ such that $vk_{\mu,i}\neq vk'_j$ for all $j$.
+We can guess such $\mu,i$ pair beforehand with probability $1/Q$, where $Q$ is the maximum number of verification keys, and abort in case of a bad guess.
 
-Without loss of generality, we may assume that $\vecb{vk}_\mu$ has not repeated entries since the verifier might drop all repeated entries in $R$ without changing the statement.
-Suppose an adversary wish to convince the verifier that $vk=vk'_1$ is in $R$ while in fact $vk\notin R$. In particular, this implies that $vk'_1$ is different from each of $vk_{\mu,1},\ldots,vk_{\mu,m}$. By the pigeonhole principle, there must be also some $vk_{\mu,i}$ that is different from each of $vk'_1,\ldots,vk'_m$.
-
- Since we can guess such $\mu,i$ pair beforehand with non negligible probability $1/Q$, where $Q$ is the maximum number of verification keys.
-We can jump to a game where we program $\matr{A} = (\vecb{a}_1,\ldots,\vecb{a}_Q)$ such that its opening $\vecb{\beta}\in\bits^Q$ is of
- hamming weight 1 and $\beta_{\mu,i}=1$.
-By the hiding property of the commitment scheme, which is based on the SXDH assumption, the adversary notices such change in $\matr{A}$ only with negligible probability. Given that $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$, in this game the equation $\sum_{i}\beta'_i vk'_i = \sum_{i}\beta_{\mu,i} vk_{\mu,i}$ is in fact $vk'_j = vk_{\mu,i}$, for some $1\leq j \leq m$, and hence the adversary has 0 probability of winning.
+We jump to a game where we set $\vecb{\beta}$ of
+ hamming weight 1 such that $\beta_{\mu,i}=1$, where $\vecb{\beta}$ is the vector of openings of $\matr{A} = (\vecb{a}_1,\ldots,\vecb{a}_Q)$.
+By the hiding property of the commitment scheme, which is based on the SXDH assumption, the adversary notices such change in $\matr{A}$ only with negligible probability. Furthermore, in this game the equation $\sum_{i}\beta'_i vk'_i = \sum_{i}\beta_{\mu,i} vk_{\mu,i}$ is in fact $vk'_j = vk_{\mu,j}$, for some $1\leq j \leq m$, and hence the adversary has 0 probability of winning. We conclude that $\vecb{vk}'$ must be a permutation of $\vecb{vk}_{\mu}$ and then $vk = vk'_1\in R$.
 
 %Define $\vecb{a}_i = \Com_{ck}(\beta_i)$, a Groth-Sahai commitment to $\beta_i$, and let $\matr{A} = (\vecb{a}_1,\ldots, \vecb{a}_m)$. Define $h(\vecb{\beta})$ as the hamming weight of $\vecb{\beta} = (\beta_1,\ldots,\beta_m)^\top$ and define $g_{\vecb{\beta}}(\vecb{vk}) = \sum_{i=1}^m \beta_ivk_i$.  Now is still true $h$ is collision resistant, but is also hard to find collisions for $g$. Consider an adversary that  given $\matr{A}$ outputs $\vecb{vk},\vecb{vk}'$ a collision for $g_\vecb{\beta}$. By the hiding property of the commitment scheme, the adversary will produce a collision with roughly the same probability even if $\matr{A}$ is computed from a random binary vector $\vecb{\beta}^*$ of hamming weight 1. With probability roughly $1/m$, $\vecb{\beta}^*$ has its unique 1 at the same position $i$ where $vk'_i \neq vk_i$. We conclude that $g$ is collision resistant under the hiding property of Groth-Sahai commitments which in turn, relies on the SXDH assumption.
 
@@ -45,12 +41,12 @@ By the hiding property of the commitment scheme, which is based on the SXDH assu
 
 \subsubsection{The erasures assumption.}
 %The PPA-based ring signature has the disadvantage that the PPA is a non-constant size assumptions also known as $q$-assumptions. Furthermore,
-A ring signature must tolerate the adaptive corruption of the verification keys. That is, an adversary may adaptively ask for the random coins used for generating the verification keys. In the PPA-based ring signature, this amounts to reveal $x_i$ and $x_i^2$ which is is incompatible with the PPA (unless one considers a much stronger interactive assumption). The only alternative seems to be assume that the key generation algorithm can erase its random coins.\footnote{We elaborate more on the erasures assumption for ring signatures in \ifPKC the full version of this work \cite{EPRINT:Gon17}\else App.~\ref{sec:erasures}\fi.}
+A ring signature must tolerate the adaptive corruption of the verification keys. That is, an adversary may adaptively ask for the random coins used for generating the verification keys which, in the PPA-based ring signature,amounts to reveal $x_i$ and $x_i^2$. This is incompatible with the PPA (unless one considers a much stronger interactive assumption), so the only alternative is to assume that the key generation algorithm can erase its random coins.\footnote{We elaborate more on the erasures assumption for ring signatures in App.~\ref{sec:erasures}.}
 
 But this is not the case for the SXDH-based construction.
-To avoid erasures, each possible ring member samples the extended verification key  with $\beta=0$. Thereby, Every answer to a corruption query is of the form $0,sk$ plus all the random coins used to generate the extended verification key.
+To avoid erasures we need to show unforgeability even when the adversary may request the openings and random coins used to generate the extended verification keys. To do so, we sample $\vecb{a}_j$ with $\beta_j=0$ for all $j$. Thereby, when the adversary corrupts the $j$-th party it receives $\beta_j=0$, $sk_j$, and all the random coins used to generate the extended verification key.
 
-We can argue as before that an adversary may produce some $vk\notin R$
+We can argue as before that an adversary may produce $\vecb{vk}'$, which is not a permutation of $\vecb{vk}_\mu$,
 %it follows that an adversary which given $\matr{A}$ produces $\vecb{c}'_1$ which is not a re-randomization of any of $\vecb{c}_{\mu,1},\ldots,\vecb{c}_{\mu,m}$, will also produce a non-randomization
 with roughly the same probability even if $\matr{A}$ is computed from a random binary vector $\vecb{\beta}$ of hamming weight 1 with the unique $1$ in the right place. In this case we can answer all corruption queries with the exception of the unique verification key for which $\beta=1$. But anyway, the probability that the adversary corrupts this verification key is no greater than $1/Q$ so we can safely abort if this is the case. The rest of the argument is exactly as before.
 
@@ -78,7 +74,7 @@ with roughly the same probability even if $\matr{A}$ is computed from a random b
 %If we use Gonzalez et al.'s techniques we would have to show that for all $\vecb{a}'\in A',$ $\vecb{a}'\in A_ \mu$. However, we can't do this since $A_\mu$ is unknown to the verifier. Instead, it seems that we are using stronger properties of the permutation pairing assumption. We use $h(A_\mu)$ as a constant-size computationally binding commitment of the set $A_\mu$, i.e.~invariant under permutations of the input, which is also structure preserving, i.e.~$A_\mu\subset\GG^2_1$ and $h(A_\mu)\in\GG_1$. It is an interesting open problem to construct $h$ from standard assumptions (e.g.~DDH, DLin).
 
 \subsubsection{Relation to \cite{AC:GonHevRaf15}.}
-Our construction is similar to the set membership proof of Gonz\'alez et al.~{\cite[Appendix D.2]{AC:GonHevRaf15} also of size $\Theta(\sqrt[3]{n})$. There, the CRS contains a matrix $\matr{A}$ of size $2\times m$ that is used to compute $\sqrt[3]{n}$ hashes of $n^{2/3}$ of subsets of verification keys of size $\sqrt[3]{n}$. Then some hidden hash is shown to belong to the set for $n^{2/3}$ hashes. These hashes are computed as a linear combination of the columns of $\matr{A}$ with the verification keys.
+Our construction is similar to the set membership proof of Gonz\'alez et al.~{\cite[Appendix D.2]{AC:GonHevRaf15} also of size $\Theta(\sqrt[3]{n})$. There, the CRS contains a matrix $\matr{A}$ of size $2\times m$ that is used to compute $\sqrt[3]{n}$ hashes of $n^{2/3}$ of subsets of verification keys of size $\sqrt[3]{n}$. Then some hidden hash is shown to belong to the set fo $n^{2/3}$ hashes. These hashes are computed as a linear combination of the columns of $\matr{A}$ with the verification keys.
 
 One could turn this construction into a ring signature including $vk\matr{A}$ in each verification key. However, the fact that $\matr{A}$ is fixed implies that signatures of size $\Theta(\sqrt[3]{n})$ can be obtained only when $n\leq m^{3}$. So, asymptotically, this is not a $\Theta(\sqrt[3]{n})$ signature. Furthermore, the verification key will be of size $\Theta(m)$. In contrast, our ring signature verification keys are of size $\Theta(1)$ and the size of the ring is unbounded.
 %
