--- a/intro/table-eff.tex
+++ b/intro/table-eff.tex
@@ -7,7 +7,7 @@
 \begin{scriptsize}
 \begin{tabular}{l|l|l|l}
 %\hline
-                                           & Chandran et al.~\cite{ICALP:ChaGroSah07} & App.~\ref{sec:ppa-full} &  Sect.~\ref{sec:our-construction} \\
+                                           & Chandran et al.~\cite{ICALP:ChaGroSah07} & Sect.~\ref{sec:our-construction-ppa} &  Sect.~\ref{sec:our-construction} \\
 \hline%\hline
 \rule{0pt}{2.5ex}CRS size  $\GG_1/\GG_2$              & 4/4                                      & $4/4$  & 4/8    \\
 \rule{0pt}{2.5ex}Verification key size $\GG_1/\GG_2$    & $1/0$                                       & $2/5$  &   10/9  \\
@@ -20,7 +20,7 @@
 \end{tabular}
 \end{scriptsize}
 \end{center}
-\caption{Comparison of Chandran et al.'s ring signature and ours for a ring of size $n$. `Signature generation' is given in number of exponentiations, `Verification time' is given in number of pairings, and all other rows are given in number of group elements. The security of the three schemes is proved under the unforgeability of the Boneh-Boyen signature scheme plus the corresponding assumption indicated in the row `Assumption'.
+\caption{Comparison of Chandran et al.'s ring signature and ours for a ring of size $n$. `Signature generation' is given in number of exponentiations, `Verification' is given in number of pairings, and all other rows are given in number of group elements. The security of the three schemes is proved under the unforgeability of the Boneh-Boyen signature scheme plus the corresponding assumption indicated in the row `Assumption'.
 The last row states if the key generation algorithm erases its random coins after generating the verification and secret keys.
 %A quick calculation shows that our signature outperforms Chandran et al.'s (roughly) for $n>180$.
 \label{table:eff}}
