--- a/manualbib.bib
+++ b/manualbib.bib
@@ -1,3 +1,11 @@
+@misc{EPRINT:Gon17,
+    author = {Alonso González},
+    title = {Shorter Ring Signatures from Standard Assumptions},
+    howpublished = {Cryptology ePrint Archive, Report 2017/905},
+    year = {2017},
+    note = {\url{https://eprint.iacr.org/2017/905}},
+}
+
 @inproceedings{CREE:JueCarJak10,
   author    = {Ari Juels and
                Dario Catalano and
