--- a/our-construction/our-hashes-sxdh.tex
+++ b/our-construction/our-hashes-sxdh.tex
@@ -155,14 +155,14 @@ Below we proceed to bound $\Pr[\neg\mathsf{Abort}|\allowbreak\sfGame_0(\advA)=1]
 
 The probability is: a) the probability that each of the corruption calls doesn't abort and b) the probability that $[x_i]_2\neq[x'_i]_2$. The probability of a) is $\frac{m-i}{m}$ at the $i$-th call, and the probability of b) is at least $\frac{1}{m-t}$. It follows that the desired probability is at least $\frac{m-1}{m}\frac{m-2}{m-1}\cdots\frac{m-t}{m}\frac{1}{m-t}=\frac{1}{m}$ and then $\Pr[\sfGame_0(\advA)=1]\leq m \Pr[\sfGame_1(\advA)=1]$.
 
-It holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$, for some adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key wich is changed from perfectly binding to perfectly hiding. %However, here the argument is slightly more subtle. An adversary attempting to tell apart perfectly binding from perfectly hiding Groth-Sahai commitments keys (or equivalently, an adversary against SXDH) can't efficiently simulate $\sfGame_1(\advA)$ and $\sfGame_2(\advA)$ as they require the computation of $g$ while the discrete logarithm of the commitment keys is unknown. Let $\matr{C}_1,\matr{C}'_1$ and $\matr{C}_2,\matr{C}'_2$ the purported collisions output by $\advA$ in, respectively, $\sfGame_1$ and $\sfGame_2$. We note that $\Pr[\sfGame_1(\advA)=1] \leq \Pr[x_{1,i}\neq x'_{1,i}]$ and $\Pr[\sfGame_2(\advA)=1] = \Pr[x_{2,i}\neq x'_{2,i}]$, since in $\sfGame_2$ it holds that $g_{\matr{A}}(\matr{C}) = \vecb{k}^\top\matr{A}\matr{C} = 0 = g_\matr{A}(\matr{C}')$ for any $\matr{C},\matr{C}'$. Therefore, $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq \Pr[x_{1,i}\neq x'_{1,i}]-\Pr[x_{2,i}\neq x'_{2,i}]$. Instead of simulating the games, the adversary $\advB$, which receives as challenge Groth-Sahai commitment keys, runs $\sfGame_1$ replacing the commitment keys by it challenges and outputs $1$ if $x_i\neq x'_i$ and $0$ otherwise regardless of whether $g_\matr{A}(\matr{C})=g_{\matr{A}}(\matr{C}')$ or not.
+It holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$, for some adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key which is changed from perfectly binding to perfectly hiding. %However, here the argument is slightly more subtle. An adversary attempting to tell apart perfectly binding from perfectly hiding Groth-Sahai commitments keys (or equivalently, an adversary against SXDH) can't efficiently simulate $\sfGame_1(\advA)$ and $\sfGame_2(\advA)$ as they require the computation of $g$ while the discrete logarithm of the commitment keys is unknown. Let $\matr{C}_1,\matr{C}'_1$ and $\matr{C}_2,\matr{C}'_2$ the purported collisions output by $\advA$ in, respectively, $\sfGame_1$ and $\sfGame_2$. We note that $\Pr[\sfGame_1(\advA)=1] \leq \Pr[x_{1,i}\neq x'_{1,i}]$ and $\Pr[\sfGame_2(\advA)=1] = \Pr[x_{2,i}\neq x'_{2,i}]$, since in $\sfGame_2$ it holds that $g_{\matr{A}}(\matr{C}) = \vecb{k}^\top\matr{A}\matr{C} = 0 = g_\matr{A}(\matr{C}')$ for any $\matr{C},\matr{C}'$. Therefore, $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq \Pr[x_{1,i}\neq x'_{1,i}]-\Pr[x_{2,i}\neq x'_{2,i}]$. Instead of simulating the games, the adversary $\advB$, which receives as challenge Groth-Sahai commitment keys, runs $\sfGame_1$ replacing the commitment keys by it challenges and outputs $1$ if $x_i\neq x'_i$ and $0$ otherwise regardless of whether $g_\matr{A}(\matr{C})=g_{\matr{A}}(\matr{C}')$ or not.
 
 It also holds that $\Pr[\sfGame_2(\advA)=1]-\Pr[\sfGame_3(\advA)=1]=0$, since commitment keys $[\matr{U}]_1,[\matr{V}]_2$ are perfectly hiding in both games, and hence, $k_1,\ldots,k_m$ follow exactly the same distribution in both games.
 %Note that, by the self-reducibility of DDH, we can change many ciphertexts at once without increasing  the security loss.\footnote{For completeness, assume that you want to switch from encryptions of $m_1,\ldots,m_\ell\in\Z_q$ to encryptions of $m'_1,\ldots,m'_\ell\in\Z_q$. Construct an adversary that asks to its left or right oracle for encryptions of $0$ or $1$, receives $[\vecb{c}]_2$ as challenge, and returns $[\vecb{c}_i] := m_i[\vecb{c}_i] + m'_i[\smallpmatrix{0\\1}-\vecb{c}_i]_2+\delta_i[\vecb{w}]_2$, $\delta_i\gets\Z_q$. Clearly, when $[\vecb{c}]_2$ encrypts $1$, then the adversary returns encryptions to $m_1,\ldots,m_\ell$, and when it encrypts $0$ returns encryptions to $m'_1,\ldots,m'_\ell$.} Note that, when changing the cyperthexts, we need to simulate proofs as in (\ref{eq:Qm-sim-proofs}) and (\ref{eq:sim-proofs}).
 
 Similarly as before, $\Pr[\sfGame_4(\advA)=1]-\Pr[\sfGame_3(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$. We point out that the adversary, after corrupting the $j$-th key, could detect that $[\vecb{a}_j]_1$'s  can no longer be opened to 0 since now the commitment keys are perfectly binding. However, since only $\beta_i\neq 0$, this can not happened as the game would have aborted when corrupting $k_i$.
 
-Finaly, $\Pr[\sfGame_4(\advA)=1]=0$ since in this case $x_i \neq x'_i$ but $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak[\vecb{\omega}]_1)=g_{\matr{A}}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$  only if $x_i = x'_i$. Indeed, note that in this case $\vecb{u}_1\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top,\allowbreak\vecb{u}_2\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top$ is a basis of $\Z_q^{2\times 2}$. Then, there is a collision only if
+Finally, $\Pr[\sfGame_4(\advA)=1]=0$ since in this case $x_i \neq x'_i$ but $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak[\vecb{\omega}]_1)=g_{\matr{A}}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$  only if $x_i = x'_i$. Indeed, note that in this case $\vecb{u}_1\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top,\allowbreak\vecb{u}_2\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top$ is a basis of $\Z_q^{2\times 2}$. Then, there is a collision only if
 \begin{align*}
 0=&\matr{A}(\matr{C}-\matr{C}')^\top - (\vec{\psi}-\vecb{\psi}')\vecb{w}_2 - \vecb{u}_2(\vecb{\omega}-\vecb{\omega}')^\top\\
 =&\vecb{u}_1\vecb{\beta}^\top(\vecb{x}-\vecb{x}')\vecb{w}_1^\top - (\vec{\psi}-\vecb{\psi}'-\vecb{u}_1\vecb{\beta^\top}(\vecb{s}-\vecb{s}'))\vecb{w}_2 - \\
@@ -204,14 +204,14 @@ Below we proceed to bound $\Pr[\neg\mathsf{Abort}|\sfGame_0(\advA)=1]$.
 
 The probability is: a) the probability that each of the corruption calls doesn't abort and b) the probability that $[x_i]_2\neq[x'_j]_2$ for all $j\in[m]$. The probability of a) is $\frac{m-i}{m}$ at the $i$-th call, and the probability of b) is at least $\frac{1}{m-t}$. It follows that the desired probability is at least $\frac{m-1}{m}\frac{m-2}{m-1}\cdots\frac{m-t}{m}\frac{1}{m-t}=\frac{1}{m}$ and then $\Pr[\sfGame_0(\advA)=1]\leq m \Pr[\sfGame_1(\advA)=1]$.
 
-It holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$, for some adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key wich is changed from perfectly binding to perfectly hiding. %However, here the argument is slightly more subtle. An adversary attempting to tell apart perfectly binding from perfectly hiding Groth-Sahai commitments keys (or equivalently, an adversary against SXDH) can't efficiently simulate $\sfGame_1(\advA)$ and $\sfGame_2(\advA)$ as they require the computation of $g$ while the discrete logarithm of the commitment keys is unknown. Let $\matr{C}_1,\matr{C}'_1$ and $\matr{C}_2,\matr{C}'_2$ the purported collisions output by $\advA$ in, respectively, $\sfGame_1$ and $\sfGame_2$. We note that $\Pr[\sfGame_1(\advA)=1] \leq \Pr[x_{1,i}\neq x'_{1,i}]$ and $\Pr[\sfGame_2(\advA)=1] = \Pr[x_{2,i}\neq x'_{2,i}]$, since in $\sfGame_2$ it holds that $g_{\matr{A}}(\matr{C}) = \vecb{k}^\top\matr{A}\matr{C} = 0 = g_\matr{A}(\matr{C}')$ for any $\matr{C},\matr{C}'$. Therefore, $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq \Pr[x_{1,i}\neq x'_{1,i}]-\Pr[x_{2,i}\neq x'_{2,i}]$. Instead of simulating the games, the adversary $\advB$, which receives as challenge Groth-Sahai commitment keys, runs $\sfGame_1$ replacing the commitment keys by it challenges and outputs $1$ if $x_i\neq x'_i$ and $0$ otherwise regardless of whether $g_\matr{A}(\matr{C})=g_{\matr{A}}(\matr{C}')$ or not.
+It holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$, for some adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key which is changed from perfectly binding to perfectly hiding. %However, here the argument is slightly more subtle. An adversary attempting to tell apart perfectly binding from perfectly hiding Groth-Sahai commitments keys (or equivalently, an adversary against SXDH) can't efficiently simulate $\sfGame_1(\advA)$ and $\sfGame_2(\advA)$ as they require the computation of $g$ while the discrete logarithm of the commitment keys is unknown. Let $\matr{C}_1,\matr{C}'_1$ and $\matr{C}_2,\matr{C}'_2$ the purported collisions output by $\advA$ in, respectively, $\sfGame_1$ and $\sfGame_2$. We note that $\Pr[\sfGame_1(\advA)=1] \leq \Pr[x_{1,i}\neq x'_{1,i}]$ and $\Pr[\sfGame_2(\advA)=1] = \Pr[x_{2,i}\neq x'_{2,i}]$, since in $\sfGame_2$ it holds that $g_{\matr{A}}(\matr{C}) = \vecb{k}^\top\matr{A}\matr{C} = 0 = g_\matr{A}(\matr{C}')$ for any $\matr{C},\matr{C}'$. Therefore, $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq \Pr[x_{1,i}\neq x'_{1,i}]-\Pr[x_{2,i}\neq x'_{2,i}]$. Instead of simulating the games, the adversary $\advB$, which receives as challenge Groth-Sahai commitment keys, runs $\sfGame_1$ replacing the commitment keys by it challenges and outputs $1$ if $x_i\neq x'_i$ and $0$ otherwise regardless of whether $g_\matr{A}(\matr{C})=g_{\matr{A}}(\matr{C}')$ or not.
 
 It also holds that $\Pr[\sfGame_2(\advA)=1]-\Pr[\sfGame_3(\advA)=1]=0$, since commitment keys $[\matr{U}]_1,[\matr{V}]_2$ are perfectly hiding in both games, and hence, $k_1,\ldots,k_m$ follow exactly the same distribution in both games.
 %Note that, by the self-reducibility of DDH, we can change many ciphertexts at once without increasing  the security loss.\footnote{For completeness, assume that you want to switch from encryptions of $m_1,\ldots,m_\ell\in\Z_q$ to encryptions of $m'_1,\ldots,m'_\ell\in\Z_q$. Construct an adversary that asks to its left or right oracle for encryptions of $0$ or $1$, receives $[\vecb{c}]_2$ as challenge, and returns $[\vecb{c}_i] := m_i[\vecb{c}_i] + m'_i[\smallpmatrix{0\\1}-\vecb{c}_i]_2+\delta_i[\vecb{w}]_2$, $\delta_i\gets\Z_q$. Clearly, when $[\vecb{c}]_2$ encrypts $1$, then the adversary returns encryptions to $m_1,\ldots,m_\ell$, and when it encrypts $0$ returns encryptions to $m'_1,\ldots,m'_\ell$.} Note that, when changing the cyperthexts, we need to simulate proofs as in (\ref{eq:Qm-sim-proofs}) and (\ref{eq:sim-proofs}).
 
 Similarly as before, $\Pr[\sfGame_4(\advA)=1]-\Pr[\sfGame_3(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$. We point out that the adversary, after corrupting the $j$-th key, could detect that $[\vecb{a}_j]_1$'s  could no longer be opened to 0 since now the commitment keys are perfectly binding. However, since only $\beta_i\neq 0$, this can not happened as the game would have aborted when corrupting $k_i$.
 
-Finaly, $\Pr[\sfGame_4(\advA)=1]=0$ since in this case $x_i \neq x'_j$ for all $j\in[m]$, but $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak[\vecb{\omega}]_1)=g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$  only if $x_i = x'_j$ for some $j\in[m]$. Indeed, note that there is some permutation matrix $\matr{P}$ and $\vecb{\delta}\in\Z_q^m$ such that $\matr{A}'  = \matr{A}\matr{P}+\vecb{u}_2\vecb{\delta}^\top$, and note also that $\vecb{u}_1\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top,\vecb{u}_2\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top$ is a basis of $\Z_q^{2\times 2}$. There is a collision only if
+Finally, $\Pr[\sfGame_4(\advA)=1]=0$ since in this case $x_i \neq x'_j$ for all $j\in[m]$, but $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak[\vecb{\omega}]_1)=g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$  only if $x_i = x'_j$ for some $j\in[m]$. Indeed, note that there is some permutation matrix $\matr{P}$ and $\vecb{\delta}\in\Z_q^m$ such that $\matr{A}'  = \matr{A}\matr{P}+\vecb{u}_2\vecb{\delta}^\top$, and note also that $\vecb{u}_1\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top,\vecb{u}_2\vecb{w}_1^\top,\vecb{u}_1\vecb{w}_2^\top$ is a basis of $\Z_q^{2\times 2}$. There is a collision only if
 \begin{align*}
 0=&(\matr{A}\matr{C}-\matr{A}'\matr{C}')^\top - (\vec{\psi}-\vecb{\psi}')\vecb{w}_2 - \vecb{u}_2(\vecb{\omega}-\vecb{\omega}')^\top\\
 =&\vecb{u}_1\vecb{\beta}^\top(\vecb{x}-\matr{P}\vecb{x}')\vecb{w}_1^\top - (\vec{\psi}-\vecb{\psi}'-\vecb{u}_1\vecb{\beta}^\top(\vecb{s}-\vecb{s}'))\vecb{w}_2 - \\
