--- a/our-construction/our-hashes.tex
+++ b/our-construction/our-hashes.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main-ring-signature.tex
 
-The high level description of out PPA based ring signature was already given in sect. \ref{sec:tech-overview}. Next we proceed to formally define the hash functions $h$ and $g$ a then we give the formal description of the protocol. We defer the proof of security to App. \ref{sec:ppa-sec-proof} 
+The high level description of our PPA based ring signature was already given in sect. \ref{sec:tech-overview}. Next we proceed to formally define the hash functions $h$ and $g$ a then we give the formal description and security proof of the protocol. %We defer the proof of security to App. \ref{sec:ppa-sec-proof} 
 
 %In this section we construct two different (but related) hash functions. The functions $g$ and $h$ defined in section \ref{sec:hf-ppa}  are proven collision resistant under the PPA (and the $\kermdh$) assumption. In section \ref{sec:hf-sxdh} we give another pair of functions $g$ and $h$ which we prove collision resistant under the SXDH assumtion.
 
