--- a/prelim/hash.tex
+++ b/prelim/hash.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main-ring-signature.tex
 
-We recall the definition of a hash function plus a weaker notion where the adversary needs to find a second preimage (see \cite{FSE:RogShr04}). We consider a functions $h:\mathcal{K}\times\mathcal{M}\to\mathcal{Y}$ and an algorithm $\KGen$ which on input a group key randomly samples an element from $\mathcal{K}$.
+We recall the definition of a hash function plus a weaker notion where the adversary needs to find a second preimage (see \cite{FSE:RogShr04}). We consider a function $h:\mathcal{K}\times\mathcal{M}\to\mathcal{Y}$ and an algorithm $\KGen$ which on input a group key randomly samples an element from $\mathcal{K}$.
 
 \begin{definition}[Collision Resistance]\label{def:hash1}
  We say that $h$ is a hash-function family with collision resistance if for all PPT adversary $\advA$
