--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -10,13 +10,14 @@ Given the practical usefulness of ring signatures, it becomes crucial to study a
 
 \subsection{Related Work}
 The efficiency of a ring signature might be splitted into three parameters: the signature size, the time required for computing a signature, and the time required for verifying a signature. Among these metrics, the signature size has received the most attention and improvements in the size usually imply improvement in the other metrics.
-In terms of ring size, two of the most efficient constructions have signature size logarithmic in the size of the ring \cite{EC:GroKoh15,EC:LLNW16}. Both constructions rely on the {random oracle model}, which is an idealization of hash functions with known theoretical inconsistencies \cite{FOCS:GolKal03}. Malavolta et al.~constructed a constant size ring signature without random oracles \cite{AC:MalSch17} using SNARKS \cite{EC:GGPR13,AC:DFGK14,EC:Groth16} as a subroutine, which are known to require controversial non-falsifiable assumptions such as the knowledge of exponent assumption  \cite{STOC:GenWic11,C:Naor03}. Unlike traditional falsifiable assumptions (e.g.~DDH), is not possible to efficiently check whether the adversary effectively breaks the assumption yielding non-explicit security reductions \cite{C:Naor03}. In practice, random oracles and non-falsifiable assumptions offer great efficiency at the price of less understood security guarantees. Therefore, we believe that it is  important and challenging to explore practical constructions from milder assumptions.
+In terms of signature size, two of the most efficient constructions have signature size logarithmic in the size of the ring \cite{EC:GroKoh15,EC:LLNW16}. Both constructions rely on the {random oracle model}, which is an idealization of hash functions with known theoretical inconsistencies \cite{FOCS:GolKal03}. Malavolta et al.~constructed a constant size ring signature without random oracles \cite{AC:MalSch17} using SNARKS \cite{EC:GGPR13,AC:DFGK14,EC:Groth16} as a subroutine, which are known to require controversial non-falsifiable assumptions such as the knowledge of exponent assumption  \cite{STOC:GenWic11,C:Naor03}. Unlike traditional falsifiable assumptions (e.g.~DDH), is not possible to efficiently check whether the adversary effectively breaks the assumption yielding non-explicit security reductions \cite{C:Naor03}. In practice, random oracles and non-falsifiable assumptions offer great efficiency at the price of less understood security guarantees. Therefore, we believe that it is  important and challenging to explore practical constructions from milder assumptions.
 
 Using only standard assumptions like RSA, Chase and Lysyanskaya proposed a ring signature scheme whose size is independent from the number of users \cite{C:ChaLys06}. %Unfortunately, the size is too large for consider it practical.
 %\footnote{This works seems to has gone unnoticed in the ring signature literature. In fact, to the best of our knowledge, the only recent work citing it is \cite{AC:MalSch17}.} 
 Their ring signature is built on top of
 signatures of knowledge and accumulators, following Dodis et al.~\cite{EC:DKNS04}. The scheme description is only sketched and no proof of security is given but, for fairness (as also noted in \cite{AC:MalSch17}), their work is previous to the (now standard) formal definition of ring signatures of Bender et al.~\cite{TCC:BenKatMor06}.
-Anyway, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from standard NIZK. The underlying statements involve congruence modulo $\phi(N)$ for $N$ a RSA modulus. To the best of our knowledge, no efficient NIZK schemes under standard assumptions are known for statements of this kind. Thus, the only alternative seems NIZK for circuit satisfiability probably leading to an impractical solution.
+Anyway, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from standard NIZK. The underlying statements involve multiplications modulo $\phi(N)$ and exponentiations modulo $N$, where $N$ an RSA modulus. To the best of our knowledge, no efficient NIZK schemes under standard assumptions are known for statements of this kind. Thus, the only alternative under standard assumptions seems the NIZK for circuit satisfiability of Groth, Ostrovsky and Sahai \cite{EC:GroOstSah06}. A naive implementation of this protocol would require, at least, perfectly binding bit-by-bit commitments of integers in $\Z_N$. Typically, $N$ requires $1024$ bits so this solution requires at least $1024$ elements of a bilinear group. On contrast, our construction is far more efficient than that for any $n<10^4$.
+Although it might be possible to avoid committing bit-by-bit, there would be still many challenges. For example, it would require a NIZK proof that $a = b^y\mod N$, for $a,b\in\Z_N,y\in\Z_{\phi(N)}$, for which the only solution seems to be committing to $y$ bit-by-bit (in order to use binary exponentiation) leading again to proofs of $\sim1024$ group elements. Our conclusion is that is not clear how to implement Chase and Lysyanskaya's ring signature in a practical way.
 %Their scheme is as follows.
 %Given a ring of RSA public keys $R = \{(N,y_1),...,(N,y_n)\}\subseteq \Z_{\phi(N)}$, one can compute an accumulated value $a = g^{\prod_{i=1}^n y_i}$ and a witness $w_i = a^{-y_i} \mod N$ that $y_i$ is accumulated in $a$, which can be verified checking if $a = w_i^{y_i} \mod N$. A ring signature on a message $m$ is computed as a signature on $m$ of knowledge of $x_i,y_i\in \Z_{\phi(N)}, w_i\in \Z_N$ such that: a) $x_iy_i = 1 \mod \phi(N)$ and b)  $a = w_i^{y_i} \mod N$. However, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from standard NIZK, and the only NIZK proof system for a) and b) we are aware of seems to be generic NIZK for circuit satisfiability.
 %Using Groth-Sahai proofs the proof will require $O(|C|)$ elements of a bilinear group, where $|C|$ is the size of the circuit for computing a) $\wedge$ b). One might expect the circuit for a) and b) to have at least $\approx 10^4$ gates\footnote{For example, in \url{https://www.cs.bris.ac.uk/Research/CryptographySecurity/MPC/}, a circuit for multiplying 32x32-bit integers requires $\approx 10^4$ gates. Our estimation is quite conservative since RSA integers should be of size $\geq 1024$, and further, one might expect a circuit for a) and b) to contain at least thousands of multiplication gates.}, and thus the proof will be of size greater than $10^4$ elements of a bilinear group. %We would like to note that the NIZK proof used in this construction is \emph{non-blackbox}, that is, it requires a bit-by-bit representation of elements and group operations of $\Z_{\phi(N)}$ and $\Z_N$. We believe this 
@@ -24,7 +25,7 @@ Anyway, signatures of knowledge are built on top of simulation sound NIZK which 
 Despite Chase and Lysyanskaya's construction, without random oracles or non-falsifiable assumptions all constructions have signatures of size linear in the size of the ring, being the sole exception the $\Theta(\sqrt{n})$ ring signature of Chandran et al.~\cite{ICALP:ChaGroSah07}. They construct a simple and elegant ring signature which at its core implements a \emph{set-membership proof}, i.e.~a proof that some committed public key belongs to the set of public keys of the ring users. Their set-membership proof is quite strong, in the sense that the verification keys may be even chosen by the adversary. Going a step forward, we will build a more efficient but weaker set-membership proof which is still useful for building ring signatures.
 
 We note that no improvements in the
-signature size have been made within a decade. In fact, although two previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, in App.~\ref{sec:rs-flawed} we show that one construction fails to give a correct proof of security and the other is in fact of size $\Theta(n)$. The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
+signature size have been made within a decade. In fact, although two previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, in \ifPKC the full version (see \cite{EPRINT:Gon17}) of this work \else App.~\ref{sec:rs-flawed} \fi we show that one construction fails to give a correct proof of security and the other is in fact of size $\Theta(n)$. The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
 
 \subsection{Our contribution}
 In this work we present the first ring signature based on bilinear groups whose signature size is asymptotically smaller than Chandran et al.'s, and whose security is proven under falsifiable assumptions and without random oracles. The signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings. Our ring signature is perfectly anonymous, i.e.~it completely hides the identity of the actual signer, and is computationally infeasible to forge signatures for non-members of the ring.
@@ -32,7 +33,7 @@ In this work we present the first ring signature based on bilinear groups whose 
 As a first step, we construct a $\Theta(\sqrt[3]{n})$ ring signature whose security relies on a security assumption --- the {permutation pairing assumption} --- introduced by Groth and Lu \cite{AC:GroLu07} in an unrelated setting: proofs of correctness of a shuffle. While the assumption is ``non-standard'', in the sense that is not a ``DDH like'' assumption, it is a falsifiable assumption and it was proven hard in generic symmetric bilinear groups by Groth and Lu. We work on asymmetric groups (Type III groups \cite{EPRINT:GalPatSma06}) and thus we give a natural translation of the permutation pairing assumption which we also prove secure in generic asymmetric bilinear groups.
 
 We give a second construction which is solely based on the security of the DDH assumption in both base groups (the so called SXDH assumption). The construction is highly inspired in the first construction, but we manage to get rid of the permutation pairing assumption and further shorten the size of the signature. 
-A comparison of our ring signatures and Chandran et al.'s is given in Table \ref{table:eff} which summarizes a more detailed analysis found in Appendix \ref{sec:eff-analysis}.
+A comparison of our ring signatures and Chandran et al.'s is given in Table \ref{table:eff}\ifPKC\else which summarizes a more detailed analysis found in Appendix \ref{sec:eff-analysis}\fi.
 
 %Our ring signature outperforms Chandran et al.'s in terms signature size for any $n > 144$, in terms of signature generation time for any $n>96$, and in terms of verifier efficiency for any $n>111$. However, this analysis should be taken with care, since Chandran et al.'s signature is proven secure under the decisional linear (DLin) assumption while ours is proven secure under the permutation pairing assumption. Being the permutation pairing assumption much less studied than DLin, it could be the case that our scheme would be as secure as Chandran et al.'s at higher values of the security parameter. In Table \ref{table:eff} we provide a comparison between our scheme and Chandran et al.'s.
  
