--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -16,9 +16,10 @@
 %\titlerunning{An Efficient Ring Signature in the Standard Model} %optional, in case that the title is too long; the running title should fit into the top page column
 
 %% Please provide for each author the \author and \affil macro, even when authors have the same affiliation, i.e. for each author there needs to be the  \author and \affil macros
-%\author[1]{Alonso Gonz\'alez}
-%\affil[1]{Ecole Normale Sup\'erieure de Lyon, Laboratoire LIP (France)\\
- % \texttt{alonso.gonzalez@ens-lyon.fr}}
+\author[1]{Alonso Gonz\'alez \inst{1}\thanks{This work was funded in part by the French ANR ALAMBIC project 
+(ANR-16-CE39-0006).}}
+\institute{ENS de Lyon, Laboratoire LIP (U. Lyon, CNRS, ENSL, INRIA, UCBL), France.\\
+\texttt{alonso.gonzalez@ens-lyon.fr}}
 %\authorrunning{A.\,Gonz\'alez} %mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et. al.'
 
 %\Copyright{Alonso Gonz\'alez}%mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
@@ -42,7 +43,8 @@
 % Editor-only macros::end %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-
+\newif\ifPKC
+\PKCtrue
 
 
 
@@ -102,12 +104,14 @@
     
     	\input{our-construction/our-hashes}
     	
-    	\subsection{Our hash functions from the PPA assumption} \label{sec:hf-ppa}
+    	\subsection{The hash functions $h$ and $g$} \label{sec:hf-ppa}
     	
     		\input{our-construction/our-hashes-ppa}
     		
     	\subsection{Our Ring Signature}\label{sec:our-construction-ppa}
         			\input{our-construction/construction} 
+        			
+        			\input{appendix/security-proof}
 
 
 	\input{our-construction/hash}
@@ -119,6 +123,12 @@
 		\subsection{Our Ring Signature}\label{sec:our-construction}
         		\input{our-construction/construction-sxdh} 
 		\input{appendix/security-proof-sxdh}
+		
+		
+	\section{Acknowledgments}
+		We thank to the anonymous reviewers for the constructive feedback. It was very useful for simplifying the SXDH-based construction.
+		We also thanks Carla R\`afols and Mojtaba Khalili for their comments on earlier versions of this work.
+		This work was funded in part by  the French ANR ALAMBIC project (ANR-16-CE39-0006).
 
 	%\section{Conclusions}
 
@@ -133,12 +143,14 @@
 
 %% .. or use the thebibliography environment explicitely
 %\end{document}
+\ifPKC \end{document}
+\else
 \newpage
 \appendix
 
-\begin{center}\begin{Large}{\bf
-Shorter Ring Signatures from Standard Assumptions: Supplementary Material
-}\end{Large}\end{center}
+%\begin{center}\begin{Large}{\bf
+%Shorter Ring Signatures from Standard Assumptions: Supplementary Material
+%}\end{Large}\end{center}
 \vspace{1cm}
 
 	\section{Security of the $m$-PPA assumption in Asymmetric Groups} \label{sec:aPPA}
@@ -150,13 +162,13 @@ Shorter Ring Signatures from Standard Assumptions: Supplementary Material
 		%\input{our-construction/our-hashes}
 		
 		
-	\section{Security Proof of the PPA-based Ring Signature} \label{sec:ppa-sec-proof}
+	%\section{Security Proof of the PPA-based Ring Signature} \label{sec:ppa-sec-proof}
 	
-			\input{appendix/security-proof}
+	%		\input{appendix/security-proof}
 
 
 	%\section{Proof of Theorem \ref{theo:security}} \label{sec:sec-proof}
-	\section{Re-radomizable Groth-Sahai NIZK proofs} \label{sec:GSproofs-hg}
+	\section{Re-randomizable Groth-Sahai NIZK proofs} \label{sec:GSproofs-hg}
 	
 	In this section we detail the Groth-Sahai proofs used by the SXDH-based ring signature. We also describe how these proofs can be re-randomized, as shown by Belenky et al.~\cite{C:BCCKLS09}.
 		\subsection{Groth-Sahai proofs for $\beta(\beta-1)=0$} \label{sec:GSproofs-h}
@@ -185,6 +197,10 @@ Shorter Ring Signatures from Standard Assumptions: Supplementary Material
         	 \section{The Erasures Assumption in Ring Signatures} \label{sec:erasures}
         	 
         	 	\input{appendix/erasures}
+        	 	
+        	 \section{Getting rid of the CRS}
+        	 
+        	 	\input{appendix/crs-less}
 
 %\section{Our construction in Asymmetric Groups}
 %
