--- a/prelim/assumptions.tex
+++ b/prelim/assumptions.tex
@@ -20,9 +20,28 @@ $$\end{small}
 where $[\matr{Z}]=[\vecb{z}_1\cat\cdots\cat\vecb{z}_m]_1\in\GG_1^{2\times m}, [\matr{A}]_1=[\vecb{a}_1\cat\cdots\cat\vecb{a}_m]_1\in\GG_1^{2\times m}$, $[\underline{\vecb{z}}]_2=\allowbreak[(\underline{z}_1,\ldots,\allowbreak \underline{z}_m)]_2\in\GG_2^{1\times m}$,
  is negligible in $\lambda$.
 \end{definition}
-Groth and Lu proved the hardness of the PPA in generic symmetric bilinear groups \cite{AC:GroLu07}. In Appendix \ref{sec:aPPA} we show that the $m$-PPA in generic asymmetric groups is as hard as the PPA in generic symmetric groups.
+Groth and Lu proved the hardness of the PPA in generic symmetric bilinear groups \cite{AC:GroLu07}. In \ifPKC the full version of this work \else Appendix \ref{sec:aPPA}\fi we show that the $m$-PPA in generic asymmetric groups is as hard as the PPA in generic symmetric groups \ifPKC\cite{EPRINT:Gon17}\fi.
 
-We recall also the definition of the Decisional Diffie-Hellman assumption (in matrix notation) and the kernel matrix Diffie-Hellman assumption.
+For constructing the function $g$ in the PPA instantiation we require the assumption that is hard to find $[\vecb{x}]_2\in\GG_2^m\setminus\{0\}$ such that $[\vecb{x}^\top]_2[\matr{A}^\top]_1 = 0$, where $\matr{A}\gets\mathcal{Q}_m$. Groth and Lu proved the generic hardness of the natural translation of this assumption to symmetric groups \cite{AC:GroLu07}.
+We observe that this assumption corresponds to a kernel assumption \cite{AC:MorRafVil16}, the $\mathcal{Q}_m^\top\mbox{-}\kermdh$ assumption in symmetric groups.
+
+\begin{definition}[Kernel Diffie-Hellman Assumption in $\GG$ \cite{AC:MorRafVil16}] Let  $\gk 
+\gets\ggen_a(1^\lambda)$ and $\dist_{\ell,k}$ a distribution over $\Z_q^{\ell\times k}$.
+The Kernel Diffie-Hellman assumption in $\GG$ ($\dist_{\ell,k}\mbox{-}\kermdh_{\GG_s}$) says that every PPT Algorithm has negligible advantage in the following  game: given $[\matr{A}]$, where $\matrA \gets \dist_{\ell,k}$, find $[\vecb{x}] \in \GG^{\ell}$, $\vecb{x} \neq \vecb{0}$, such that 
+$[\vecb{x}]^{\top}[\matr{A}]=[\vecb{0}]_T$. 
+\end{definition}
+
+Our assumption is the natural translation of the $Q_m^\top\mbox{-}\kermdh$ assumption to asymmetric groups, where  $[\matr{A}]_s$ is also given in $\GG_{3-s}$.  Such assumption is a weaker variant of a \emph{split} $\kermdh$ assumption, introduced in \cite{AC:GonHevRaf15}, where the adversary might find an element in $\mathrm{Ker}(\matr{A})$ which is splitted between $\GG_1$ and $\GG_2$.
+
+\begin{definition}[Split Kernel Diffie-Hellman Assumption \cite{AC:GonHevRaf15}] Let  $\gk 
+\gets\ggen_a(1^\lambda)$ and $\dist_{\ell,k}$ a distribution over $\Z_q^{\ell\times k}$.
+The Split Kernel Diffie-Hellman assumption ($\dist_{\ell,k}\mbox{-}\skermdh$) says that every PPT Algorithm has negligible advantage in the following  game: given $[\matr{A}]_1,[\matr{A}]_2$, where $\matrA \gets \dist_{\ell,k}$, find $[\vecb{x}]_1\in\GG_1^\ell,[\vecb{y}]_2 \in \GG^{\ell}_{2}$, $\vecb{x}\neq\vecb{y}$, such that 
+$[\vecb{x}]_{1}^{\top}[\matr{A}]_1=[\vecb{y}]_2^\top[\matr{A}]_2$. 
+\end{definition}
+ Our weaker variant restricts the adversary to give solutions only in $\GG_1$ (i.e.~$[\vecb{y}]_2=0$), while we simply refer to it as the $Q_m^\top\mbox{-}\skermdh$.
+Gonz\'alez et al.~proved that, in generic asymmetric groups, the $\dist_{\ell,k}\mbox{-}\skermdh$ is as hard as the $\dist_{\ell,k}\mbox{-}\kermdh$ assumption in symmetric groups, for any distribution $\dist_{\ell,k}$ \cite{AC:GonHevRaf15}. We conclude that the $Q_m^\top\mbox{-}\skermdh$ is hard in generic asymmetric groups (and of course, the weaker variant that we will be using).
+
+Finally, we recall also the definition of the Decisional Diffie-Hellman assumption (in matrix notation).
 
 \begin{definition}[Decisional Diffie-Hellman (DDH) in $\GG_s$]\label{def:dlin}
  Let  $\gk 
@@ -44,21 +63,3 @@ $$
 is negligible in $\lambda$, where the probability is taken over $gk\gets\ggen_a(1^\lambda)$, $a\gets\ZZ_q$, ${w}\gets\ZZ_q$, $[\vecb{z}]_2\gets\GG^2_s$, and the coin tosses of the adversary.
 We say that the Symmetric eXternal Diffie-Hellman (SXDH) assumption holds if the DDH assumption holds in both $\GG_1$ and $\GG_2$.
 \end{definition}
-
-We recall a family of assumptions which are weaker than the so called \emph{Matrix Diffie-Hellman} assumptions (a generalization of the DDH and DLin assumptions introduced by Escala et al.~\cite{C:EHKRV13}).
-\begin{definition}[Kernel Diffie-Hellman Assumption in $\GG_s$ \cite{AC:MorRafVil16}] Let  $\gk 
-\gets\ggen_a(1^\lambda)$ and $\dist_{\ell,k}$ a distribution over $\Z_q^{\ell\times k}$.
-The Kernel Diffie-Hellman assumption in $\GG_s$ ($\dist_{\ell,k}\mbox{-}\kermdh_{\GG_s}$) says that every PPT Algorithm has negligible advantage in the following  game: given $[\matr{A}]_s$, where $\matrA \gets \dist_{\ell,k}$, find $[\vecb{x}]_{3-s} \in \GG^{\ell}_{3-s}$, $\vecb{x} \neq \vecb{0}$, such that 
-$[\vecb{x}]_{3-s}^{\top}[\matr{A}]_s=[\vecb{0}]_T$. 
-\end{definition}
-Although using a different notation, the $Q_m^\top\mbox{-}\kermdh$ in symmetric groups was introduced by Groth and Lu \cite{AC:GroLu07}.
-We use a natural translation of the $Q_m^\top\mbox{-}\kermdh$ assumption to asymmetric groups, where  $[\matr{A}]_s$ is also given in $\GG_{3-s}$.  Such assumption is a weaker variant of a \emph{split} $\kermdh$ assumption, introduced in \cite{AC:GonHevRaf15}, where the adversary might find an element in $\mathrm{Ker}(\matr{A})$ which is splitted between $\GG_1$ and $\GG_2$.
-
-\begin{definition}[Split Kernel Diffie-Hellman Assumption \cite{AC:GonHevRaf15}] Let  $\gk 
-\gets\ggen_a(1^\lambda)$ and $\dist_{\ell,k}$ a distribution over $\Z_q^{\ell\times k}$.
-The Split Kernel Diffie-Hellman assumption ($\dist_{\ell,k}\mbox{-}\skermdh$) says that every PPT Algorithm has negligible advantage in the following  game: given $[\matr{A}]_1,[\matr{A}]_2$, where $\matrA \gets \dist_{\ell,k}$, find $[\vecb{x}]_1\in\GG_1^\ell,[\vecb{y}]_2 \in \GG^{\ell}_{2}$, $\vecb{x}\neq\vecb{y}$, such that 
-$[\vecb{x}]_{1}^{\top}[\matr{A}]_1=[\vecb{y}]_2^\top[\matr{A}]_2$. 
-\end{definition}
- Our weaker variant restrict the adversary to give solutions only in $\GG_1$ (i.e.~$[\vecb{y}]_2=0$), while we simply refer to it as the $Q_m^\top\mbox{-}\skermdh$.
-
-Groth and Lu proved the hardness of the $Q_m^\top\mbox{-}\kermdh$ assumption in generic symmetric groups, and Gonz\'alez et al.~proved that, in generic asymmetric groups, the $\dist_{\ell,k}\mbox{-}\skermdh$ is as hard as the $\dist_{\ell,k}\mbox{-}\kermdh$ assumption in symmetric groups, for any distribution $\dist_{\ell,k}$. We conclude that the $Q_m^\top\mbox{-}\skermdh$ is hard in generic asymmetric groups (and of course, the weaker variant that we will be using).
