--- a/prelim/flawed.tex
+++ b/prelim/flawed.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main-ring-signature.tex
 
-Bose et al.~claim to construct a constant-size ring signature in the standard model \cite{ACISP:BosDasRan15}. However, we believe its security can not correctly be assessed. Our first observation is that they use they use a computational assumption, the SQROOT assumption, in the ``exponent'' of elements of a composite order bilinear group. More formally, they assume that, given composite order bilinear groups $\GG_1,\GG_2,\GG_T$ of order $N$, there are hard problems in the set of quadratic residues modulo $N$, $Q_N\subset \Z_N$. Although, not necessarily false, this is at least odd as, similarly, on might assume the hardness of DDH in the set of quadratic residues of $\Z_q$ when $\GG_1,\GG_2,\GG_T$ are bilinear groups of prime order order $p$. One might expect that, at least, both $N$ and $p$ must be quite large integers.
+Bose et al.~claim to construct a constant-size ring signature in the standard model \cite{ACISP:BosDasRan15}. However, we believe its security can not correctly be assessed. Our first observation is that they use a computational assumption, the SQROOT assumption, in the ``exponent'' of elements of a composite order bilinear group. More formally, they assume that, given composite order bilinear groups $\GG_1,\GG_2,\GG_T$ of order $N$, there are hard problems in the set of quadratic residues modulo $N$, $Q_N\subset \Z_N$. Although, not necessarily false, this is at least odd as, similarly, one might assume the hardness of DDH in the set of quadratic residues of $\Z_q$ when $\GG_1,\GG_2,\GG_T$ are bilinear groups of prime order order $p$. One might expect that, at least, both $N$ and $p$ must be quite large integers.
 
 Even assuming the security of SQROOT, is still difficult to asses the security of their protocol from the security proof they provide. Specifically, on page 18 they construct an EUF-CMA adversary $\mathcal{A}_3$ which ``hands over the tuple $(rParam, \{PK_1, PK_2, \ldots, PK_{i^*} , \ldots, PK_k\})$ to ring adversary $\mathcal{D}$''. However, $\mathcal{A}_3$ must also hand the extended public keys (i.e. those containing the squares of the secret keys). Adversary $\mathcal{A}_3$ clearly can do this for parties other than $P_{i^*}$, while this is not true for $P_{i^*}$ since $sk_{i^*}$ is not known.
 In general, the problem is that the underlying signature scheme might not be secure if the integer $sk_{i,j}^2$ is public, as done on page 9 in the description of the {\bf RKeyGen} algorithm. Note that one can compute forgeries in $\GG_2$ for the full BB, given $a^2$, $b^2$ one can compute $(g_2^{a} g_2^{b})^{1/(a^2-b^2)}=g_2^{1/(a-b)}$ which is a signature (in $\GG_2$) for message $0$ and $r=-1$. Although we don't know if actual forgeries exist, the important conclusion is that unforgeability is not guaranteed.
